; ModuleID = '/home/carl/AnghaBench/lede/package/network/config/swconfig/src/extr_cli.c_show_port.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/config/swconfig/src/extr_cli.c_show_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { i32 }
%struct.switch_val = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"Port %d:\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.switch_dev*, i32)* @show_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_port(%struct.switch_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.switch_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.switch_val, align 4
  store %struct.switch_dev* %0, %struct.switch_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.switch_val, %struct.switch_val* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load %struct.switch_dev*, %struct.switch_dev** %3, align 8
  %11 = load %struct.switch_dev*, %struct.switch_dev** %3, align 8
  %12 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @show_attrs(%struct.switch_dev* %10, i32 %13, %struct.switch_val* %5)
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @show_attrs(%struct.switch_dev*, i32, %struct.switch_val*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
